tests/ui/coverage-attr/bad-syntax.stderr
error: malformed `coverage` attribute input
  --> $DIR/bad-syntax.rs:16:1
   |
LL | #[coverage]
   | ^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   | ~~~~~~~~~~~~~~~~
LL | #[coverage(on)]
   | ~~~~~~~~~~~~~~~

error: malformed `coverage` attribute input
  --> $DIR/bad-syntax.rs:19:1
   |
LL | #[coverage = true]
   | ^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   | ~~~~~~~~~~~~~~~~
LL | #[coverage(on)]
   | ~~~~~~~~~~~~~~~

error: malformed `coverage` attribute input
  --> $DIR/bad-syntax.rs:22:1
   |
LL | #[coverage()]
   | ^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   | ~~~~~~~~~~~~~~~~
LL | #[coverage(on)]
   | ~~~~~~~~~~~~~~~

error: malformed `coverage` attribute input
  --> $DIR/bad-syntax.rs:25:1
   |
LL | #[coverage(off, off)]
   | ^^^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   | ~~~~~~~~~~~~~~~~
LL | #[coverage(on)]
   | ~~~~~~~~~~~~~~~

error: malformed `coverage` attribute input
  --> $DIR/bad-syntax.rs:28:1
   |
LL | #[coverage(off, on)]
   | ^^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   | ~~~~~~~~~~~~~~~~
LL | #[coverage(on)]
   | ~~~~~~~~~~~~~~~

error: malformed `coverage` attribute input
  --> $DIR/bad-syntax.rs:31:1
   |
LL | #[coverage(bogus)]
   | ^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   | ~~~~~~~~~~~~~~~~
LL | #[coverage(on)]
   | ~~~~~~~~~~~~~~~

error: malformed `coverage` attribute input
  --> $DIR/bad-syntax.rs:34:1
   |
LL | #[coverage(bogus, off)]
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   | ~~~~~~~~~~~~~~~~
LL | #[coverage(on)]
   | ~~~~~~~~~~~~~~~

error: malformed `coverage` attribute input
  --> $DIR/bad-syntax.rs:37:1
   |
LL | #[coverage(off, bogus)]
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   | ~~~~~~~~~~~~~~~~
LL | #[coverage(on)]
   | ~~~~~~~~~~~~~~~

error: expected identifier, found `,`
  --> $DIR/bad-syntax.rs:43:12
   |
LL | #[coverage(,off)]
   |            ^ expected identifier
   |
help: remove this comma
   |
LL - #[coverage(,off)]
LL + #[coverage(off)]
   |

error: multiple `coverage` attributes
  --> $DIR/bad-syntax.rs:8:1
   |
LL | #[coverage(off)]
   | ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
note: attribute also specified here
  --> $DIR/bad-syntax.rs:9:1
   |
LL | #[coverage(off)]
   | ^^^^^^^^^^^^^^^^

error: multiple `coverage` attributes
  --> $DIR/bad-syntax.rs:12:1
   |
LL | #[coverage(off)]
   | ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
note: attribute also specified here
  --> $DIR/bad-syntax.rs:13:1
   |
LL | #[coverage(on)]
   | ^^^^^^^^^^^^^^^

error: aborting due to 11 previous errors

